Added form for input

--- a/components/breed_1.html
+++ b/components/breed_1.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="nav__overlay"></div>
                 </nav>
-                <button type="button" class='button'onclick="cardDisplay()">butt</button>
+                <button type="button" style="font-size: 15px; border-radius: 3px;" class='button'onclick="cardDisplay()">+</button>
     <!-- <div class="bodyofcard">
         <div class="card1">
             <p>cart 1</p>
@@ -88,15 +88,19 @@
     </div> -->
 </body>
 <script>
+    // function cardDisplay(){
+    // var data = [['card1'],['card1'],['card77'],['card1'],['card1'],['card1'],['card1'],['card1']]
+    // const root = document.createElement('div')
+    // root.className = "bodyofcard";
+    // const card1 = document.createElement('div')
+    // card1.className = "card1";
+    // root.appendChild(card1);
+    // card1.innerHTML = '<p>dd</p>'
+    // document.body.appendChild(root)
+    // }
+
     function cardDisplay(){
-    var data = [['card1'],['card1'],['card77'],['card1'],['card1'],['card1'],['card1'],['card1']]
-    const root = document.createElement('div')
-    root.className = "bodyofcard";
-    const card1 = document.createElement('div')
-    card1.className = "card1";
-    root.appendChild(card1);
-    card1.innerHTML = '<p>dd</p>'
-    document.body.appendChild(root)
+        location.href = "http://127.0.0.1:5500/components/gettingInputForm/gettingInputPage.html";
     }
 </script>
 
