--- a/components/breeds.html
+++ b/components/breeds.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breed 1</title>
-    <link rel="stylesheet" type="text/css" href="/menu.css">
-    <link rel="stylesheet" type="text/css" href="/components/breed_1.css">
+    <link rel="stylesheet" type="text/css" href="/index.css">
+    <link rel="stylesheet" type="text/css" href="/components/breeds.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -64,7 +64,10 @@
                     </div>
                     <div class="nav__overlay"></div>
                 </nav>
-                <button type="button" style="font-size: 15px; border-radius: 3px;" class='button'onclick="cardDisplay()">+</button>
+                <div class="getinginput">
+                <a href="/gettingInputForm/gettingInputPage.html">+</a>
+            </div>
+                <!-- <button type="button" style="font-size: 15px; border-radius: 3px;" class='button'>+<a href="/gettingInputForm/gettingInputPage.html"></a></button> -->
     <!-- <div class="bodyofcard">
         <div class="card1">
             <p>cart 1</p>
@@ -99,9 +102,9 @@
     // document.body.appendChild(root)
     // }
 
-    function cardDisplay(){
-        location.href = "http://127.0.0.1:5500/components/gettingInputForm/gettingInputPage.html";
-    }
+    // function cardDisplay(){
+    //     location.href = "http://127.0.0.1:5500/gettingInputForm/gettingInputPage.html";
+    //}
 </script>
 
 </html>
